# uarm-in-gazebo

./: .gitignore  CMakeLists.txt  README.md  launch_simulation.bash  launch_simulation.zsh  launch_simulation_with_box.bash  launch_simulation_with_box.zsh
cad-files/: README.txt  base_l.dae  base_r.dae  big_fore_arm_r.dae  shoulder_r.dae  wrist_r.dae
include/: ContactPlugin.hh  SuctionCup.hh  UarmController.hh  UarmPublisher.hh  suction_cup.hh  uarm_publisher.hh
models/uarm/: model.config  model.sdf
models/uarm/meshes/: base_l.dae  base_l.stl  base_r.dae  base_r.stl  big_fore_arm_l.dae  big_fore_arm_l.stl  big_fore_arm_r.dae  big_fore_arm_r.stl  big_under_arm_l.dae  big_under_arm_l.stl  big_under_arm_r.dae  big_under_arm_r.stl  elbow.dae  elbow.stl  elbow_joint.dae  shoulder_l.dae  shoulder_l.stl  shoulder_r.dae  shoulder_r.stl  small_fore_arm.dae  small_fore_arm.stl  small_under_arm_l.dae  small_under_arm_l.stl  small_under_arm_r.dae  small_under_arm_r.stl  test.txt  volumes.txt  wrist_l.dae  wrist_l.stl  wrist_r.dae  wrist_r.stl
models/uarm_box/: model.config  uarm_box.sdf
msgs/: CMakeLists.txt  uarm_new_position_msgs.proto
src/: CMakeLists.txt  ContactPlugin.cc  SuctionCup.cc  UarmController.cc  UarmPub.cc  UarmPublisher.cc  suction_cup.cc  uarm_pub.cc  uarm_publisher.cc
src/msgs/: CMakeLists.txt  new_joint_position.proto  new_position.proto  suction_cup_contact.proto
world/: uarm_world.world  uarm_world_with_box.world
